# epsilon-cli

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/epsilon_cli/: __init__.py  _types.py  cli.py  resonance.py
src/epsilon_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_resonance.py
